# DIMACS

./: .gitignore  README.md  analyze_all.py  analyze_licketyresplit.py  requirements.txt  run_all.py  run_parameter_sweep.py
Code_files/: EDA.py  _run_config.json  analyze_all.py  clean_bike_binarized.py  download_dataset.py  model_graphs.py  (+12 more)
SPLIT-ICML/split/: LICENSE  README.md  pyproject.toml
SPLIT-ICML/split/pyproject-build/cp310-cp310-macosx_13_0_arm64/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  build.ninja  cmake_install.cmake  gosdt_cli  install_manifest.txt
SPLIT-ICML/split/pyproject-build/cp310-cp310-macosx_13_0_arm64/.cmake/api/v1/reply/: cache-v2-b6999e165b83782f072b.json  cache-v2-bed56275f2e310649d6e.json  cmakeFiles-v1-042f042b329e46aba41e.json  cmakeFiles-v1-0fa4b16c3c197a155427.json  codemodel-v2-a0213d7cef6d9a2f9f41.json  codemodel-v2-af3a2d1e6ccf7fc94f15.json  directory-.-Release-66606c39e985b10bd759.json  directory-_deps.json-build-Release-db5b71bf1cffd05853a8.json  index-2026-02-14T23-13-35-0752.json  index-2026-02-15T04-04-03-0039.json  target-PkgConfig__GMP-Release-dccc6b4912aae089f165.json  target-Python__Interpreter-Release-a1843fea42d478f2e5ed.json  target-Python__InterpreterMultiConfig-Release-589aae22cf133ed8d31b.json  target-Python__Module-Release-8b0c0acffe57b636a0b6.json  target-TBB__tbb-Release-fe13867870104e3e0601.json  target-TBB__tbbbind_2_5-Release-4e473d304b5b2a8de247.json  target-TBB__tbbmalloc-Release-e5b121b066f1b4245971.json  target-TBB__tbbmalloc_proxy-Release-99dd77751b22badd85c0.json  target-_libgosdt-Release-34744e258914a19d8502.json  target-_libgosdt-Release-7517907292324a2bb004.json  target-gosdt_cli-Release-37597da42855e6659413.json  target-nlohmann_json-Release-5da0b7ac0f601a5bbb0a.json  target-pybind11__embed-Release-8b449e201b9465e13f17.json  target-pybind11__embed-Release-d3ebddfc7f4b060d27ae.json  target-pybind11__headers-Release-127289e91bbdfdb9cd19.json  target-pybind11__headers-Release-c09fc287482fdc982e2b.json  target-pybind11__lto-Release-0d4b28b49ff40933d642.json  target-pybind11__lto-Release-a0086b97ae9a7147cb13.json  target-pybind11__module-Release-6dd5ba70915b4f79795c.json  target-pybind11__module-Release-db42958c29f0b0c13763.json  target-pybind11__opt_size-Release-6bf0092da9ddd2ec02b0.json  target-pybind11__opt_size-Release-9b916fc03035f1abb2e7.json  target-pybind11__pybind11-Release-835d75ef0e2c3f5a70b7.json  target-pybind11__pybind11-Release-eb3e274a8421c1c18a0c.json  target-pybind11__pybind11_headers-Release-3d5e6112578b66c07262.json  target-pybind11__pybind11_headers-Release-f02afcd3903babf370fc.json  target-pybind11__python_headers-Release-8815b19dcc34a651d3e4.json  target-pybind11__python_headers-Release-fde39a511c2ed68b20dd.json  target-pybind11__python_link_helper-Release-1ea56773b1375dc8b549.json  target-pybind11__python_link_helper-Release-75205a8c7df99176381d.json  (+5 more)
SPLIT-ICML/split/pyproject-build/cp312-cp312-macosx_13_0_arm64/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  build.ninja  cmake_install.cmake  gosdt_cli  install_manifest.txt
SPLIT-ICML/split/src/: cli.cpp  libgosdt.cpp
SPLIT-ICML/split/src/libgosdt/include/: configuration.hpp  optimizer.hpp  queue.hpp  task.hpp
SPLIT-ICML/split/src/libgosdt/src/: configuration.cpp  dataset.cpp  model.cpp  optimizer.cpp  queue.cpp  task.cpp
SPLIT-ICML/split/src/libgosdt/src/diagnosis/: non_convergence.cpp
SPLIT-ICML/split/src/libgosdt/src/dispatch/: dispatch.cpp
SPLIT-ICML/split/src/libgosdt/src/extraction/: models.cpp
SPLIT-ICML/split/src/split/: SPLIT.py  _classifier.py  _version.py  debug.py  run_split.py  utils.py
SPLIT-ICML/split/tests/: test_compatibility.py  test_gosdtbinarizer.py
(+338 files in other folders)
